--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=false
 org.gradle.caching=true
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
